# WAFormer

./: .gitignore  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/ui/: accordion.jsx  alert-dialog.jsx  avatar.jsx  badge.jsx  breadcrumb.jsx  button-group.jsx  calendar.jsx  carousel.jsx  chart.jsx  checkbox.jsx  command.jsx  context-menu.jsx  dialog.jsx  drawer.jsx  dropdown-menu.jsx  empty.jsx  field.jsx  form.jsx  hover-card.jsx  input-group.jsx  input-otp.jsx  item.jsx  kbd.jsx  menubar.jsx  navigation-menu.jsx  pagination.jsx  popover.jsx  progress.jsx  radio-group.jsx  resizable.jsx  scroll-area.jsx  select.jsx  sheet.jsx  sidebar.jsx  skeleton.jsx  slider.jsx  sonner.jsx  spinner.jsx  switch.jsx  table.jsx  (+5 more)
server/: main.py  pyproject.toml
server/WAFormer/utils/: exceptions.py  logger.py
