[project]
name = "waformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "aiofiles>=25.1.0",
    "datasets>=4.4.1",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "peft>=0.17.1",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true